# AdventOfCode2022

./: .gitignore  README.md  difficulty.txt
1. Calorie Counting/: CMakeLists.txt
1. Calorie Counting/src/: main.cpp
2. Rock Paper Scissors/src/: main.cpp
3. Rucksack Reorganization/src/: main.cpp  part1.cpp
4. Camp Cleanup/src/: main.cpp
4. Camp Cleanup/src/linkedlist/: linkedlist.cpp  linkedlist.h
5. Supply Stacks/: CMakeLists.txt
5. Supply Stacks/src/: main.cpp
5. Supply Stacks/src/llist/: llist.cpp
5. Supply Stacks/src/stack/: stack.cpp  stack.h
